<resources>
    <string name="app_name">Tutorial</string>
    <string name="stuID">Enter STudent ID</string>
    <string name="acaYear">Select Academic Year</string>
    <string name="sem">Select the Semester</string>
    <string name="tc">I agree to terms and Conditions</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>

    <string-array name="years">
        <item></item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string-array name="semesters">
        <item>Semester 1</item>
        <item>Semester 2</item>
    </string-array>

</resources>

